# ERAtw-NEXT

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  schema.test.ts  styles.css  theme.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ModernMap.tsx  TraditionalView.tsx
apps/desktop/src/components/traditional/: ActionBar.tsx  AsciiMapViewport.tsx  CharacterDock.tsx  DialogueLayer.tsx  (+10 more)
apps/desktop/src/content/: ContentPackageScreen.test.tsx  ContentPackageScreen.tsx
apps/desktop/src/engine/: client.ts  demoWorld.test.ts  demoWorld.ts  displayText.test.ts  displayText.ts  mockData.ts  sampleContentPackage.ts  useEngine.test.ts  useEngine.ts
apps/desktop/src/game/: GameScreen.test.tsx  GameScreen.tsx
apps/desktop/src/map/: AsciiMapRenderer.tsx  MapView.test.tsx  MapView.tsx  SvgMapRenderer.tsx  mapGeometry.test.ts  mapGeometry.ts
apps/desktop/src/settings/: SettingsContext.tsx
apps/desktop/src/system/: SystemStatusScreen.tsx
crates/content/: Cargo.toml
crates/content/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/examples/: runtime_smoke.rs
crates/engine/src/: content.rs  game.rs  lib.rs  map.rs  resource.rs  save.rs  status.rs
crates/mod_cli/: Cargo.toml
crates/mod_cli/src/: main.rs
crates/mod_runtime/: Cargo.toml
crates/mod_runtime/src/: lib.rs
docs/: index.md
docs/architecture/: adr-0001-project-boundary.md  m0-summary.md  m2-dialogue-playback.md  m2-engine-save.md  m2-engine-scheduler.md  m3-resource-loading.md  m6-mod-runtime.md
docs/content/: content-boundary.md  m1-audit-plan.md  m1-local-audit-snapshot.md  schemas.md
docs/reports/: 2026-06-13-eratw-content-inventory.md
docs/roadmap/: modernization-roadmap.md
docs/superpowers/specs/: 2026-06-12-m0-modern-engine-skeleton-design.md  2026-06-13-m1-content-audit-design.md  2026-06-13-m2-content-schema-design.md  2026-06-13-m3-content-runtime-design.md  2026-06-13-m4-game-state-save-design.md
examples/mods/minimal-character/: character.json  manifest.json
schemas/: content-audit-csv-stats.schema.json  content-audit-directory-record.schema.json  content-audit-erb-stats.schema.json  content-audit-file-record.schema.json  content-audit-resources.schema.json  content-audit-summary.schema.json  content-character.schema.json  content-dialogue-scene.schema.json  content-dialogue-source.schema.json  content-dictionary-entry.schema.json  content-location.schema.json  content-package-index.schema.json  content-package-validation.schema.json  content-package.schema.json  content-resource.schema.json  content-source-file.schema.json  content-unmapped-item.schema.json  game-command.schema.json  game-state.schema.json  map-model.schema.json  migration-report.schema.json  save-envelope.schema.json  save-report.schema.json  system-status.schema.json
schemas/fixtures/m1/: content-audit-summary.valid.json  csv-stats.valid.json  directory-record.valid.json  erb-stats.valid.json  file-record.valid.json  resources.valid.json
schemas/fixtures/m2/: character.valid.json  dialogue-scene.valid.json  dialogue-source.valid.json  dictionary-entry.valid.json  location.valid.json  manifest.valid.json  migration-report.valid.json  resource.valid.json  source-file.valid.json  unmapped-item.valid.json  validation-report.valid.json
schemas/fixtures/m3/: content-package-index.valid.json
schemas/fixtures/m4/: game-command.valid.json  game-state.valid.json  save-envelope.valid.json  save-report.valid.json
tools/content-audit/: Cargo.toml
tools/content-audit/src/: lib.rs  main.rs  resource_analysis.rs  text_analysis.rs
tools/content-migrate/: Cargo.toml
tools/content-migrate/src/: lib.rs  main.rs
tools/content-pipeline/: README.md  pyproject.toml
tools/content-pipeline/src/eratw_content_pipeline/: __init__.py  cli.py  legacy_audit.py  legacy_maps.py
tools/content-pipeline/tests/: test_legacy_audit.py  test_legacy_maps.py
