[workspace]
resolver = "2"
members = [
  "crates/engine",
  "apps/desktop/src-tauri",
  "tools/content-audit",
  "tools/content-migrate",
]

[workspace.package]
version = "0.1.0-m0"
edition = "2021"
license = "MIT"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
