[package]
name = "eratw_content"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
eratw_engine = { path = "../engine" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
