[package]
name = "eratw_next_content_migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ERAtw-NEXT M2 draft content package generator and validator."

[dependencies]
eratw_next_content_audit = { path = "../content-audit" }
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
