[project]
name = "eratw-next-content-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
description = "Offline tools for ERAtw-NEXT content audit and packaging."

[project.scripts]
eratw-content-pipeline = "eratw_content_pipeline.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
