[package]
name = "eratw-next-desktop"
version = "0.1.0"
description = "ERAtw-NEXT desktop shell"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "eratw_next_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
eratw_engine = { path = "../../../crates/engine" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
